In the process of implementing a view where students select a list to view. Still can't get past login page due to an unknown routing issue.

--- a/views/waitingroom.erb
+++ b/views/waitingroom.erb
@@ -1,3 +1,9 @@
-<h1> Now Serving: </h1>
+<select name='Choose a class'>
+  <% Student.lists.each do |list| %>
+    <option value="<%= list %>"> </option>
+  <% end %>
+</select>
+<form action='/choose_list' method='POST'>
 
-<p> Your number is: 2 </p>
+</form>
+<a href='/logout'>Logout</a>
