Added enable :sessions to fix login bug. Now retrieval of user lists needs to be straightened out.

--- a/views/waitingroom.erb
+++ b/views/waitingroom.erb
@@ -1,5 +1,5 @@
 <select name='Choose a class'>
-  <% Student.lists.each do |list| %>
+  <% @lists.each do |list| %>
     <option value="<%= list %>"> </option>
   <% end %>
 </select>
