--- a/views/login.erb
+++ b/views/login.erb
@@ -16,26 +16,11 @@
 
 <div class="panel">
   <div class="panel-body">
-    <h4 class="list-group-item-heading">Register New Student:</h4>
-    <form action='/new_student' method='POST'>
+    <h4 class="list-group-item-heading">Register New User:</h4>
+    <form action='/new_user' method='POST'>
       <div class="form-group">
-        <input class="form-control" type='text' name='name' placeholder='username' />
+        <input class="form-control" type='text' name='user_type' placeholder='teacher or student' />
       </div>
-      <div class="form-group">
-        <input class="form-control" type="password" name="password" placeholder="password" />
-      </div>
-      <div class="form-group">
-        <input class="form-control" type="password" name="password_confirmation" placeholder="password confirmation" />
-      </div>
-      <button type='submit' class="btn btn-primary">Register</button>
-    </form>
-  </div>
-</div>
-
-<div class="panel">
-  <div class="panel-body">
-    <h4 class="list-group-item-heading">Register New Teacher:</h4>
-    <form action='/new_teacher' method='POST'>
       <div class="form-group">
         <input class="form-control" type='text' name='name' placeholder='username' />
       </div>
