Teachers can make tickers for classes, students can see the list of all tickers. Working on making each ticker concurrent for all students.

--- a/views/student_ticker_page.erb
+++ b/views/student_ticker_page.erb
@@ -1,9 +1,11 @@
 <h1> Now Serving: </h1>
 
-<p> <%= @list %> </p>
+<p>
+  <%= @user.name %>
+</p>
 
 <h2>
-<a href='/'>Back to main page</a>
+<a href='/'>Go Back</a>
 </h2>
 
 <h3>
