--- a/views/studentpage.erb
+++ b/views/studentpage.erb
@@ -1,19 +1,12 @@
-<h1> Welcome <%= @registered_student.name %> </h1>
+<h1> Welcome <%= @user.name %> </h1>
 
 <h2>
   Join a class list:
-  <form action='/choose_list/:list_name' method='POST'>
-    <input type='text' name='name' placeholder='name'/>
-    <button type='submit'>submit</button>
-  </form>
+  <% @tickers.each do |ticker| %>
+  <p>
+    <a href='/choose_ticker/<%= ticker.name %>'><%= ticker.name %></a>
+  </p>
+  <% end %>
 </h2>
-
-<h3>
-  Go to:
-<select name='Choose a class'>
-  <option value="<%= @lists %>"> </option>
-</select>
-<form action='/choose_list' method='POST'>
-</h3>
 
 <a href='/logout'>Logout</a>
