Final submission for regrading. In process of figuring out how to use a schema with a has_and_belongs_to_many association.

--- a/views/student_ticker_page.erb
+++ b/views/student_ticker_page.erb
@@ -1,7 +1,10 @@
 <h1> Now Serving: </h1>
 
 <p>
-  <%= @user.name %>
+<%  current = 1
+    @ticker.users.all.each do |user| %>
+<%=   current + @user.name %>
+<%  end %>
 </p>
 
 <h2>
